<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imgFilme"
        android:layout_width="0dip"
        android:layout_height="150dp"
        android:layout_weight=".3"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/label_titulo_filme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTituloFilme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/label_ano_filme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAnoFilme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/label_genero_filme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGeneroFilme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/label_lancamento_filme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDataLancamentoFilme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/label_duracao_filme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDuracaoFilme"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>